byobu (5.111) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2016 12:29:07 -0500

byobu (5.110-0ubuntu1) yakkety; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/logo:
    - added a logo for AlpineLinux, which has published an apk for Byobu
  * usr/share/byobu/status/status, usr/share/byobu/status/statusrc:
   - default to showing disk space
   - fix DISTRO to BYOBU_DISTRO in template
  * debian/control: LP: #1596364
    - add |xterm to suggests
  * usr/bin/purge-old-kernels: LP: #1595977
    - modify the kernel purge algorithm slightly to better handle efi
      and virtual kernels
  * usr/bin/purge-old-kernels: LP: #1532153
    - run autoremove afterwards, to clean up anything else
  * usr/lib/byobu/include/select-session.py: LP: #1583590
    - fix default window selection by just hitting enter
  * usr/share/man/man1/byobu.1:
    - add some whitespace in the manpage

  [ ironstorm ]
  * usr/lib/byobu/cpu_temp: LP: #1587139
    - add cpu temp support for rpi1, rpi2, and rpi3

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2016 12:29:04 -0500

byobu (5.109-0ubuntu1) yakkety; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/include/icons, usr/lib/byobu/reboot_required,
    usr/lib/byobu/updates_available:
    - add an checkbox icon
    - fix formatting again
  * usr/share/byobu/desktop/byobu.desktop.old,
    usr/share/byobu/desktop/Makefile.am:
    - deprecated

  [ Grant Likely ]
  * usr/lib/byobu/include/select-session.py:
    - Add support for tmux grouped sessions
    - select-session.py: Pass command name in argument list

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Jul 2016 10:47:22 -0500

byobu (5.108-0ubuntu1) yakkety; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/updates_available:
    - remove trailing whitespace
  * usr/lib/byobu/battery:
    - only use POWER_SUPPLY_CAPACITY if neither POWER_SUPPLY_ENERGY_NOW nor