@@ -1,6 +1,8 @@
 byobu (5.111) unreleased; urgency=medium
 
-  * UNRELEASED
+  [ Jeffery To ]
+  * usr/bin/byobu.in, usr/share/byobu/profiles/tmux:
+    - use screen-256color if possible, for both screen and tmux
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2016 12:29:07 -0500
 
